prod/vultr/10-corp-apps/1-traefix-dashboard/ingress-route-with-sso.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls
  namespace: corp-apps
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.kirbyware.io`)
      kind: Rule
      # middlewares:
      #   - name: traefik-middleware-basicauth
      middlewares:
        - name: traefik-forward-auth
          namespace: corp-apps
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-kirbyware-io-production-tls
